@@ -1,4 +1,4 @@
-$(LIBOBJDIR)/cmain.o: src/cmain.c src/scip/scip.h src/scip/def.h \
+$(BINOBJDIR)/cmain.o: src/cmain.c src/scip/scip.h src/scip/def.h \
   src/scip/type_retcode.h src/scip/message.h src/scip/type_message.h \
   src/scip/struct_message.h src/scip/pub_message.h \
   src/blockmemshell/memory.h src/scip/type_result.h src/scip/type_clock.h \
